<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/taskPanel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:background="@drawable/button"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/taskImage"
            android:layout_width="45dp"
            android:layout_height="45dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/taskTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="Пример задания"
                android:textAllCaps="false"
                android:textColor="@color/title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/taskPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="+0 "
                android:textAlignment="textEnd"
                android:textColor="@color/generalColor"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/taskInf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/taskMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="Полные условия задания"
            android:textAlignment="textStart"
            android:textColor="@color/button_text"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/taskLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/button_orange"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/upperwall_7"
                android:textColor="@color/DayTheme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <EditText
                android:id="@+id/taskPassField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="3"
                android:background="@drawable/edittext3"
                android:ems="10"
                android:hint="@string/upperwall_5"
                android:inputType="textPersonName"
                android:padding="7dp"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/taskCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_orange"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/upperwall_6"
                    android:textColor="@color/DayTheme" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>